# rust-img

./: .env  .envrc  .gitignore  Cargo.toml  dist.native.sh  img.sh  install.img.service.sh  nginx.sh  run.sh  service  service.log.sh  service.sh  setup.sh  supervisor.sh
nginx/: img-b2.conf  jpg.5ok.pw.conf
sh/: cflag.sh  jpegxl-rs.sh  libjxl.sh
src/: main.rs
src/url/: img.rs
supervisor/: xxai-img.ini
