[package]
name = "img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = "0.6.20"
coarsetime = "0.1.23"
fast_image_resize = "2.7.3"
futures = "0.3.28"
human_bytes = "0.4.2"
quinn = { version = "0.10", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "ring"
] }
image = { version = "0.24.7", features = [
  "avif-encoder",
  "libwebp",
  "webp",
  "webp-encoder"
] }
#jpegxl-rs = { path="./jpegxl-rs/jpegxl-rs" }
#jpegxl-sys = { path="./jpegxl-rs/jpegxl-sys" }
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["tokio-rustls", "http3"] }
strum = "0.25.0"
strum_macros = "0.25.2"
sysinfo = "0.29.9"
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.37"
tracing-stackdriver = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
jpegxl-rs = "0.8.2"
awp = "0.1.4"
lazy_static = "1.4.0"

# tower-http = { version = "0.4.0", features = ["trace"] }
[features]
stackdriver = ["tracing-stackdriver"]
jxl = []

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = true
opt-level = 2
incremental = true
codegen-units = 1

# overflow-checks = false
# panic = 'abort'
# strip = true
# debug-assertions = false
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "11.0.1"
